--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
           data-interval="0" data-u-ride="false" id="carousel-05a3">
           <form action="https://forms.nicepagesrv.com/v2/form/process"
             class="u-clearfix u-form-spacing-15 u-form-vertical u-inner-form"
-            style="padding: 15px;" source="email">
+            style="padding: 15px; display: none;" source="email">
             <div class="u-carousel-inner" role="listbox">
               <div class="u-carousel-item u-form-step u-slide u-active">
                 <div class="u-form-email u-form-group u-label-none">
@@ -137,6 +137,8 @@
               value="99fe3219-70ac-fd60-d59b-92d02d574366">
           </form>
         </div>
+        <a href="#"
+                class="u-btn u-btn-step u-btn-step-next u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1">Comenzar a jugar</a>
         <a href="Registro-Usuarios.html"
           class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-2-light-3 u-btn-4">Registrarse</a>
       </div>
