--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,16 @@
   <body data-home-page="Home.html" data-home-page-title="Home"
     data-path-to-root="./" data-include-products="false"
     class="u-body u-xl-mode" data-lang="en">
+    <div class="carta_comenzar_jugar">
+      <div class="card" id="carta_datos_comenzar" style="background-color: aliceblue;">
+        <card-body>
+          <a href="#"
+                class="u-btn u-btn-step u-btn-step-next u-button-style u-hover-palette-1-dark-1 u-palette-1-base u-btn-1">Comenzar a jugar</a>
+                <a href="Registro-Usuarios.html"
+                class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-2-light-3 u-btn-4" style="color: black;">Registrarse</a>
+        </card-body> 
+      </div>
+    </div>
     <header class="u-clearfix u-header u-header" id="sec-da44">
       <div class="u-clearfix u-sheet u-sheet-1" id="estilos-header">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="661"
@@ -373,3 +383,31 @@
     </section>
 
   </body></html>
+
+  <style>
+    .carta_comenzar_jugar{
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1000;
+      display: none;
+    }
+    #carta_datos_comenzar{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      height: 300px;
+      max-width: 300px;
+      max-height: 300px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      display: grid;
+      place-items: center;
+    }
+  </style>
